# Senior-Design

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  FlightController.cbuild-pack.yml  FlightController.csolution.yml  Gantt Rought Draft.gantt  PINOUT.md  README.md  links  openocd.cfg  vcpkg-configuration.json
FlightController/: .clang-format  .clangd  .gdbinit  CLAUDE.md  CMakeLists.txt  FlightController+STM32F411CEUx.cbuild-run.yml  FlightController.cbuild-idx.yml  FlightController.cbuild-set.yml  README.md  \  build.py  cmake_install.cmake  compile_commands.json  hc-05_connect.py  vcpkg-configuration.json
FlightController/.cache/clangd/index/: cmsis_compiler.h.8CC809CD3620F4F0.idx  cmsis_gcc.h.E10201287B081A2C.idx  cmsis_version.h.373123DBFF60197A.idx  core_cm4.h.53A077E092262F59.idx  main.c.A6DDC72AE64C2B02.idx  mpu_armv7.h.03928D65931C25A9.idx  stm32f411xe.h.2DD002A30DC25ACB.idx  system_stm32f4xx.h.D1C8BD83C1A17D33.idx
FlightController/FlightController/: .clangd  FlightController.Debug+STM32F411CEUx.cbuild.yml  FlightController.cproject.yml  ]  main.c
FlightController/FlightController/RTE/Device/STM32F411CEUx/: regions_STM32F411CEUx.h
FlightController/FlightController/RTE/_Debug_STM32F411CEUx/: RTE_Components.h
FlightController/html/: CMSIS_MISRA_Exceptions.html  LIS3MDL_8h.html  LIS3MDL_8h.js  LIS3MDL_8h__dep__incl.md5  LIS3MDL_8h_source.html  LSM6DSL_8h.html  LSM6DSL_8h.js  LSM6DSL_8h__dep__incl.md5  LSM6DSL_8h_source.html  LSM9DS0_8h.html  LSM9DS0_8h.js  LSM9DS0_8h_source.html  LSM9DS1_8h.html  LSM9DS1_8h.js  LSM9DS1_8h_source.html  annotated.html  annotated_dup.js  classes.html  cmsis__armcc_8h.html  cmsis__armcc_8h_source.html  cmsis__armclang_8h.html  cmsis__armclang_8h_source.html  cmsis__armclang__ltm_8h.html  cmsis__armclang__ltm_8h_source.html  cmsis__compiler_8h.html  cmsis__compiler_8h__dep__incl.md5  cmsis__compiler_8h__incl.md5  cmsis__compiler_8h_source.html  cmsis__gcc_8h.html  cmsis__gcc_8h_source.html  cmsis__iccarm_8h.html  cmsis__iccarm_8h__incl.md5  cmsis__iccarm_8h_source.html  cmsis__version_8h.html  cmsis__version_8h__dep__incl.md5  cmsis__version_8h_source.html  core__cm4_8h.html  core__cm4_8h.js  core__cm4_8h__dep__incl.md5  core__cm4_8h__incl.md5  (+555 more)
FlightController/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_11.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  defines_0.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+81 more)
FlightController/latex/: CMSIS_MISRA_Exceptions.tex  LIS3MDL_8h.tex  LIS3MDL_8h__dep__incl.md5  LIS3MDL_8h_source.tex  LSM6DSL_8h.tex  LSM6DSL_8h__dep__incl.md5  LSM6DSL_8h_source.tex  LSM9DS0_8h.tex  LSM9DS0_8h_source.tex  LSM9DS1_8h.tex  LSM9DS1_8h_source.tex  annotated.tex  cmsis__armcc_8h.tex  cmsis__armcc_8h_source.tex  cmsis__armclang_8h.tex  cmsis__armclang_8h_source.tex  cmsis__armclang__ltm_8h.tex  cmsis__armclang__ltm_8h_source.tex  cmsis__compiler_8h.tex  cmsis__compiler_8h__dep__incl.md5  cmsis__compiler_8h__incl.md5  cmsis__compiler_8h_source.tex  cmsis__gcc_8h.tex  cmsis__gcc_8h_source.tex  cmsis__iccarm_8h.tex  cmsis__iccarm_8h__incl.md5  cmsis__iccarm_8h_source.tex  cmsis__version_8h.tex  cmsis__version_8h__dep__incl.md5  cmsis__version_8h_source.tex  core__cm4_8h.tex  core__cm4_8h__dep__incl.md5  core__cm4_8h__incl.md5  core__cm4_8h_source.tex  deprecated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.tex  dirs.tex  dshot_8c.tex  (+317 more)
FlightController/src/: CMakeLists.txt  crsf.c  crsf.h  dshot.c  dshot.h  flight_controller.c  flight_controller.h  i2c.c  i2c.h  imu.c  imu.h  lora.c  lora.h  main.c  motor_control.c  motor_control.h  optical_flow.c  optical_flow.h  pid.c  pid.h  protocol.c  protocol.h  scheduler.h  spi.c  spi.h  startup_stm32f411xx.s  syscalls.c  system.c  system.h  system_stm32f4xx.c  systick.c  systick.h  uart.c  uart.h  usb_descriptors.c  utils.c  utils.h
FlightController/tests/: CMakeLists.txt  test_optical_flow.c
FlightController/tests/unit/: CMakeLists.txt  test_crsf  test_crsf.c  test_optical_flow_parse.c
FlightController/tmp/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
FlightController/tmp/1/: CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake
FlightController/tmp/FlightController.Debug+STM32F411CEUx/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
FlightController/tmp/FlightController.Debug+STM32F411CEUx/src/FlightController.Debug+STM32F411CEUx-stamp/: FlightController.Debug+STM32F411CEUx-configure-.cmake  FlightController.Debug+STM32F411CEUx-database-.cmake  FlightController.Debug+STM32F411CEUx-source_dirinfo.txt
FlightController/tmp/FlightController.Debug+STM32F411CEUx/tmp/: FlightController.Debug+STM32F411CEUx-cfgcmd.txt  FlightController.Debug+STM32F411CEUx-mkdirs.cmake
cmake/: stm32f411.cmake
inc/: LSM6DSL.h
linker/: STM32F411CEUx_FLASH.ld
remote_controller/: Cargo.toml
remote_controller/src/: main.rs
src/: CMakeLists.txt  bluetooth.c  bluetooth.h  comm.h  crsf.c  flight_controller.c  flight_controller.h  i2c.h  imu.c  imu.h  lora.h  main.c  motor_control.c  motor_control.h  optical_flow.c  optical_flow.h  pid.c  pid.h  protocol.c  protocol.h  scheduler.c  spi.c  spi.h  system.c  system.h  uart.c  utils.c
tests/: CMakeLists.txt  test_optical_flow.c
tests/unit/: CMakeLists.txt  test_optical_flow_parse.c
